force-app/main/default/objects/Intake_Form_1__c/Intake_Form_1__c.object-meta.xml
<CustomObject>
    <label>Intake Form 1</label>
    <nameField>
        <label>Intake Form 1 Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Intake Form 1&apos;s</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>