force-app/main/default/objects/Intake_Form_1__c/fields/Primary_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Primary_Insurance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Primary Insurance</label>
    <referenceTo>Insurance__c</referenceTo>
    <relationshipLabel>Intake Form 1&apos;s</relationshipLabel>
    <relationshipName>Intake_Form_1_s</relationshipName>
    <type>Lookup</type>
</CustomField>