force-app/main/default/objects/Intake_Form_1__c/fields/Primary_Insurance_Notes__c.field-meta.xml
<CustomField>
    <fullName>Primary_Insurance_Notes__c</fullName>
    <label>Primary Insurance Notes</label>
    <length>255</length>
    <type>Text</type>
</CustomField>