force-app/main/default/objects/Intake_Form_1__c/fields/Primary_InsuranceX__c.field-meta.xml
<CustomField>
    <fullName>Primary_InsuranceX__c</fullName>
    <label>Primary Insurance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>