force-app/main/default/objects/Intake_Form_1__c/fields/Referral_Note__c.field-meta.xml
<CustomField>
    <fullName>Referral_Note__c</fullName>
    <label>Referral Note</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>