force-app/main/default/objects/Intake_Form_1__c/fields/Secondary_Insurance__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Insurance__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Secondary Insurance</label>
    <referenceTo>Insurance__c</referenceTo>
    <relationshipLabel>Intake Form 1&apos;s (Secondary Insurance)</relationshipLabel>
    <relationshipName>Intake_Form_1_s1</relationshipName>
    <type>Lookup</type>
</CustomField>