force-app/main/default/objects/Intake_Form_1__c/fields/Secondary_Insurance_Policy_Number__c.field-meta.xml
<CustomField>
    <fullName>Secondary_Insurance_Policy_Number__c</fullName>
    <label>Secondary Insurance Policy Number</label>
    <length>255</length>
    <type>Text</type>
</CustomField>