force-app/main/default/objects/Intake_Form_1__c/fields/Secondary_InsuranceX__c.field-meta.xml
<CustomField>
    <fullName>Secondary_InsuranceX__c</fullName>
    <label>Secondary Insurance</label>
    <length>255</length>
    <type>Text</type>
</CustomField>